# bdl

./: BDL-Presentation.pptx  Dockerfile  MAINTAINERS.md  README.md  ast.ts  bdl.bon  bdl.yaml  bdl.yml  bun.lockb  create-presentation.js  deno.json  ir.ts  jcl.yml  package.json  presentation.md  roadmap.md  slide1-title.html  slide10-closing.html  slide2-rpc.html  slide2b-why-bridge.html  slide3-existing.html  slide4-problems.html  slide5-bdl-features.html  slide6-structural-types.html  slide7-agnostic.html  slide8-tools.html  slide9-mvp.html  syntax_example.bdl  syntax_example.jcl  tsconfig.json
.github/workflows/: publish-bdl-ts-jsr.yml  publish-bdlc-docker.yml  publish-vscode-extension.yml
ast/: attribute.ts  bdl.ts  expression.ts  token.ts
bdl/: ast.bdl  bon.bdl  bon_cst.bdl  config.bdl  cst.bdl  ir-ref.bdl  ir.bdl  ir_diff.bdl  ir_ref.bdl  reflection.bdl  standard.bdl
bdl-py/: README.md  pyproject.toml  test.py
bdl-py/bdl/parser/: bdl_parser.py  parser.py
bdl-ts/: README.md  ast-utils.ts  bun.lockb  deno.json  ir-builder.ts  package.json  tsconfig.json
bdl-vscode/: LICENSE  MAINTAINERS.md  README.md  deno.json  dnt-importmap.json  language-configuration.json  package-lock.json  package.json  vsc-extension-quickstart.md
cli/: parser.ts
docs/: ir.md  project-structure.md  standard.md  syntax.md
example-schemas/: bdl.yaml  bdl.yml  idea_sketch.bon
jcl/: ast.jcl  ir.jcl
jcl-ts/: ast-utils.ts  ast.ts  ir-builder.ts  ir.ts
parser/: bdl-parser.ts  jcl-parser.ts
standards/: conventional.bon  conventional.yaml  conventional.yml  global.yaml
(+164 files in other folders)
